@@ -22,8 +22,6 @@ public class SodiumNitrateShaker extends MicroShaker {
     }
 
     @Override protected void addCrystal( MicroModel model, ImmutableVector2D outputPoint, double volumePerSolidMole, ImmutableVector2D crystalVelocity ) {
-
-
         model.addSodiumNitrateCrystal( new SodiumNitrateCrystal( outputPoint,
                                                                  generateRandomLattice( new Function0<SodiumNitrateLattice>() {
                                                                                             public SodiumNitrateLattice apply() {
